alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_5.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid ELF architecture
 | 
 | invalidarchitecture.so=1-82
 |                          ^ expected '32 or 64'
 | 
 = while parsing:
   alpm-sonamev1: (invalidarchitecture.…)
   └ ELF architecture: (82)
     → expected '32 or 64'
 = an error occurred: Matching variant not found
