alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_6.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid sonamev1
 | 
 | invalidsoname.so~1.64
 |                 ^ expected the string to end after the sonamev1 definition.
 | 
 = while parsing:
   alpm-sonamev1: (~1.64)
   → invalid sonamev1
   → expected the string to end after the sonamev1 definition.
