alpm-types/src/relation/snapshots/soname::invalid_sonamev2_parser@case_2.snap
---
source: alpm-types/src/relation/soname.rs
---
lib:libexample.so-abc
                 ^
invalid sonamev2
expected end of input.
